--- a/fidesctl/default_taxonomy/data_uses.yml
+++ b/fidesctl/default_taxonomy/data_uses.yml
@@ -1,74 +1,117 @@
 data_use:
   # Provided Data
-  - fides_key: provide_product_or_service
-    name: Provide the Product or Service
+  - fides_key: provide
+    name: Provide the capability
+    description: Provide, give, or make available the product, service, application or system.
+  
+  - fides_key: provide.system
+    name: System
+    parent_key: provide
+    description: The source system, product, service or application being provided to the user.
 
-  - fides_key: provide_product_or_service.support
-    name: Support the Product or Service
-    parent_key: provide_product_or_service
+  - fides_key: provide.system.operations
+    name: System Operations
+    parent_key: provide.system
+    description: Use of specified data categories to operate and protect the system in order to provide the service.
 
-  - fides_key: provide_product_or_service.support_optimization
+  - fides_key: provide.system.operations.support
+    name: Operations Support
+    parent_key: provide.system.operations
+    description: Use of specified data categories to provide support for operation and protection of the system in order to provide the service.
+
+  - fides_key: provide.system.operations.support.optimization
     name: Support Optimization
-    parent_key: provide_product_or_service
+    parent_key: provide.system.operations.support
+    description: Use of specified data categories to optimize and improve support operations in order to provide the service.
 
-  - fides_key: provide_product_or_service.offer_upgrades
-    name: Offers of Product or Service Upgrades
-    parent_key: provide_product_or_service
+  - fides_key: provide.system.upgrades
+    name: Offer Upgrades
+    parent_key: provide.system
+    description: Offer upgrades or upsales such as increased capacity for the service based on monitoring of service usage.
 
   # Improvement Data
-  - fides_key: improve_product_or_service
-    name: Improve the Product or Service
+  - fides_key: improve
+    name: Improve the capability
+    description: Improve the product, service, application or system.
+
+  - fides_key: improve.system
+    name: System
+    parent_key: improve
+    description: The source system, product, service or application being improved.
 
   # Personalize Data
-  - fides_key: personalize_product_or_service
-    name: Personalize the Product or Service
+  - fides_key: personalize
+    name: Personalize the capability
+    description: Personalize the product, service, application or system.
+
+  - fides_key: personalize.system
+    name: System
+    parent_key: personalize
+    description: The source system, product, service or application being personalized.
 
   # Marketing, Advertising or Promotion Data
-  - fides_key: marketing_advertising_or_promotion
-    name: Marketing, Advertising or Promotion
+  - fides_key: advertising
+    name: Advertising, Marketing or Promotion
+    description: The promotion of products or services targeted to users based on the the processing of user provided data in the system.
 
-  - fides_key: marketing_advertising_or_promotion.first_party
+  - fides_key: advertising.first_party
     name: First Party Advertising
-    parent_key: marketing_advertising_or_promotion
+    parent_key: advertising
+    description: The promotion of products or services targeting users based on processing of derviced data from prior use of the system.  
 
-  - fides_key: marketing_advertising_or_promotion.third_party
+  - fides_key: advertising.third_party
     name: Third Party Advertising
-    parent_key: marketing_advertising_or_promotion
+    parent_key: advertising
+    description: The promotion of products or services targeting users based on processing of specific categories of data acquired from third party sources.
 
   # Marketing, Advertising or Promotion -> First Party Advertising
-  - fides_key: marketing_advertising_or_promotion.first_party.contextual
+  - fides_key: advertising.first_party.contextual
     name: First Party Contextual Advertising
-    parent_key: marketing_advertising_or_promotion.first_party
+    parent_key: advertising.first_party
+    description: The promotion of products or services targeted to users based on the processing of derived data from the users prior use of the services.
 
-  - fides_key: marketing_advertising_or_promotion.first_party.personalized
+  - fides_key: advertising.first_party.personalized
     name: First Party Personalized Advertising
-    parent_key: marketing_advertising_or_promotion.first_party
+    parent_key: advertising.first_party
+    description: The targeting and changing of promotional content based on processing of specific data categories from the user.
 
   # Marketing, Advertising or Promotion -> Third Party Advertising
-  - fides_key: marketing_advertising_or_promotion.third_party.personalized
+  - fides_key: advertising.third_party.personalized
     name: Third Party Personalized Advertising
-    parent_key: marketing_advertising_or_promotion.third_party
+    parent_key: advertising.third_party
+    description: The targeting and changing of promotional content based on processing of specific categories of user data acquired from third party sources.
 
   # Third Party Sharing
   - fides_key: third_party_sharing
     name: Third Party Sharing
+    description: The transfer of specified data categories to third parties outside of the system/application's scope.
 
   - fides_key: third_party_sharing.payment_processing
     name: Sharing for Processing Payments
     parent_key: third_party_sharing
+    description: Sharing of specified data categories with a third party for payment processing.
 
   - fides_key: third_party_sharing.personalized_advertising
     name: Sharing for Personalized Advertising
     parent_key: third_party_sharing
+    description: Sharing of specified data categories for the purpose of marketing/advertising/promotion.
+
+  - fides_key: third_party_sharing.fraud_detection
+    name: Sharing for Fraud Detection
+    parent_key: third_party_sharing
+    description: Sharing of specified data categories with a third party fo fraud prevention/detection.
 
   - fides_key: third_party_sharing.legal_obligation
     name: Sharing for Legal Obligation
     parent_key: third_party_sharing
+    description: Sharing of data for legal obligations, including contracts, applicable laws or regulations.
 
   # Collect
   - fides_key: collect
     name: Collect
+    description: Collecting and storing data in order to use it for another purpose such as data training for ML.
 
   # Train AI System
   - fides_key: train_ai_system
     name: Train AI System
+    description: Training an AI system. Please note when this data use is specified, the method and degree to which a user may be directly identified in the resulting AI system should be appended.
