--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,7 @@ requires = ["setuptools", "wheel", "versioneer-518"]  # PEP 508 specifications.
 check_untyped_defs = true
 disallow_untyped_defs = true
 files = ['src']
-exclude = ["fidesctl.ops.migrations.*"]
-exclude = ["fidesctl.ctl.migrations.*"]
+exclude = ["fidesctl.ops.migrations.*", "fidesctl.ops.migrations"]
 plugins = ["pydantic.mypy", "sqlmypy"]
 pretty = true
 show_error_codes = true
