--- a/.github/workflows/code_checks.yml
+++ b/.github/workflows/code_checks.yml
@@ -6,8 +6,8 @@ on:
       - "**.md"
 
 env:
-  CONTAINER: fidesctl-local
-  IMAGE: ethyca/fidesctl:local
+  CONTAINER: fides-local
+  IMAGE: ethyca/fides:local
 
 jobs:
   Build:
@@ -20,7 +20,7 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Build fidesctl container
+      - name: Build container
         uses: docker/build-push-action@v2
         with:
           builder: ${{ steps.buildx.outputs.name }}
@@ -30,7 +30,7 @@ jobs:
           push: false
           tags: ${{ env.IMAGE }}
 
-      - name: Upload fidesctl container
+      - name: Upload container
         uses: actions/upload-artifact@v3
         with:
           name: ${{ env.CONTAINER }}
@@ -41,13 +41,13 @@ jobs:
     needs: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Download fidesctl container
+      - name: Download fides container
         uses: actions/download-artifact@v3
         with:
           name: ${{ env.CONTAINER }}
           path: /tmp/
 
-      - name: Load fidesctl image
+      - name: Load fides image
         run: docker load --input /tmp/${{ env.CONTAINER }}.tar
 
       - name: Checkout
@@ -61,26 +61,26 @@ jobs:
       - name: Install Nox
         run: pip install nox>=2022
 
-      - name: Check fidesctl installation
+      - name: Check fides installation
         run: nox -s check_install -- docker
 
-      - name: Run fidesctl evaluation
+      - name: Run fides evaluation
         run: nox -s fidesctl -- docker
 
-      - name: Scan fidesctl db
+      - name: Scan fides db
         run: nox -s fidesctl_db_scan -- docker
 
   isort:
     needs: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Download fidesctl container
+      - name: Download fides container
         uses: actions/download-artifact@v3
         with:
           name: ${{ env.CONTAINER }}
           path: /tmp/
 
-      - name: Load fidesctl image
+      - name: Load fides image
         run: docker load --input /tmp/${{ env.CONTAINER }}.tar
 
       - name: Checkout
@@ -96,13 +96,13 @@ jobs:
     needs: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Download fidesctl container
+      - name: Download fides container
         uses: actions/download-artifact@v3
         with:
           name: ${{ env.CONTAINER }}
           path: /tmp/
 
-      - name: Load fidesctl image
+      - name: Load fides image
         run: docker load --input /tmp/${{ env.CONTAINER }}.tar
 
       - name: Checkout
@@ -118,13 +118,13 @@ jobs:
     needs: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Download fidesctl container
+      - name: Download fides container
         uses: actions/download-artifact@v3
         with:
           name: ${{ env.CONTAINER }}
           path: /tmp/
 
-      - name: Load fidesctl image
+      - name: Load fides image
         run: docker load --input /tmp/${{ env.CONTAINER }}.tar
 
       - name: Checkout
@@ -140,13 +140,13 @@ jobs:
     needs: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Download fidesctl container
+      - name: Download fides container
         uses: actions/download-artifact@v3
         with:
           name: ${{ env.CONTAINER }}
           path: /tmp/
 
-      - name: Load fidesctl image
+      - name: Load fides image
         run: docker load --input /tmp/${{ env.CONTAINER }}.tar
 
       - name: Checkout
@@ -162,13 +162,13 @@ jobs:
     needs: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Download fidesctl container
+      - name: Download fides container
         uses: actions/download-artifact@v3
         with:
           name: ${{ env.CONTAINER }}
           path: /tmp/
 
-      - name: Load fidesctl image
+      - name: Load fides image
         run: docker load --input /tmp/${{ env.CONTAINER }}.tar
 
       - name: Checkout
@@ -184,13 +184,13 @@ jobs:
     needs: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Download fidesctl container
+      - name: Download fides container
         uses: actions/download-artifact@v3
         with:
           name: ${{ env.CONTAINER }}
           path: /tmp/
 
-      - name: Load fidesctl image
+      - name: Load fides image
         run: docker load --input /tmp/${{ env.CONTAINER }}.tar
 
       - name: Checkout
@@ -206,13 +206,13 @@ jobs:
     needs: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Download fidesctl container
+      - name: Download fides container
         uses: actions/download-artifact@v3
         with:
           name: ${{ env.CONTAINER }}
           path: /tmp/
 
-      - name: Load fidesctl image
+      - name: Load fides image
         run: docker load --input /tmp/${{ env.CONTAINER }}.tar
 
       - name: Checkout
@@ -228,13 +228,13 @@ jobs:
     needs: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Download fidesctl container
+      - name: Download fides container
         uses: actions/download-artifact@v3
         with:
           name: ${{ env.CONTAINER }}
           path: /tmp/
 
-      - name: Load fidesctl image
+      - name: Load fides image
         run: docker load --input /tmp/${{ env.CONTAINER }}.tar
 
       - name: Checkout
@@ -250,13 +250,13 @@ jobs:
     needs: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Download fidesctl container
+      - name: Download fides container
         uses: actions/download-artifact@v3
         with:
           name: ${{ env.CONTAINER }}
           path: /tmp/
 
-      - name: Load fidesctl image
+      - name: Load fides image
         run: docker load --input /tmp/${{ env.CONTAINER }}.tar
 
       - name: Checkout
